chore: update crafting documentation

--- a/noclip-crafting/configuration.html
+++ b/noclip-crafting/configuration.html
@@ -566,7 +566,7 @@
                 <div class="next-steps">
                     <h3>Next Steps</h3>
                     <div class="step-links">
-                        <a href="installation.html" class="btn btn-secondary">
+                        <a href="installation.html" class="btn btn-primary">
                             <i class="fas fa-download"></i>
                             Installation Guide
                         </a>
@@ -574,7 +574,7 @@
                             <i class="fas fa-code"></i>
                             Exports & API
                         </a>
-                        <a href="troubleshooting.html" class="btn btn-secondary">
+                        <a href="troubleshooting.html" class="btn btn-primary">
                             <i class="fas fa-tools"></i>
                             Troubleshooting
                         </a>
