--- a/noclip-crafting/index.html
+++ b/noclip-crafting/index.html
@@ -100,6 +100,12 @@
                     <li><strong>Encryption Ready:</strong> Prepared for script encryption with separated editable functions</li>
                     <li><strong>Skill System:</strong> Experience-based progression with level requirements</li>
                     <li><strong>Item Requirements:</strong> Require specific items to access crafting benches</li>
+                    <li><strong>Success/Failure Mechanics:</strong> Configurable success rates with ingredient loss on failure</li>
+                    <li><strong>Enhanced Error Handling:</strong> Comprehensive safety checks and validation throughout</li>
+                    <li><strong>Improved Menu Display:</strong> Clean item labels and filtered information display</li>
+                    <li><strong>Admin Commands:</strong> Built-in commands for testing and debugging</li>
+                    <li><strong>Police Alert Integration:</strong> Placeholder system for police notifications</li>
+                    <li><strong>Hazard Effect System:</strong> Configurable hazard effects with proper error handling</li>
                 </ul>
 
                 <h2>Dependencies</h2>
@@ -124,6 +130,11 @@
                     <strong>Note:</strong> Make sure to add the required items to your ox_inventory configuration. See the <a href="installation.html">Installation Guide</a> for detailed instructions.
                 </div>
 
+                <div class="alert alert-success">
+                    <i class="fas fa-check-circle"></i>
+                    <strong>Latest Updates:</strong> The script has been significantly improved with enhanced error handling, success/failure mechanics, improved menu display, and comprehensive debugging tools. See the <a href="troubleshooting.html">Troubleshooting Guide</a> for details on recent fixes.
+                </div>
+
                 <h2>Configuration Overview</h2>
                 <p>The script is highly configurable with options for:</p>
                 <ul>
@@ -133,6 +144,9 @@
                     <li><strong>Job Restrictions:</strong> Set job and grade requirements for each location</li>
                     <li><strong>Skill System:</strong> Configure experience gain and level requirements</li>
                     <li><strong>Item Requirements:</strong> Require specific items to access crafting benches</li>
+                    <li><strong>Success/Failure Rates:</strong> Configure crafting success chances and ingredient loss on failure</li>
+                    <li><strong>Hazard Effects:</strong> Set up hazard effects and police alert integration</li>
+                    <li><strong>Admin Commands:</strong> Configure admin commands for testing and debugging</li>
                 </ul>
 
                 <div class="next-steps">
