--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -98,6 +98,11 @@
 
                 <h2>noclip_crafting Specific Issues</h2>
 
+                <div class="alert alert-info">
+                    <i class="fas fa-info-circle"></i>
+                    <strong>For detailed noclip_crafting troubleshooting:</strong> See the <a href="noclip-crafting/troubleshooting.html">dedicated troubleshooting guide</a> which includes recent fixes and improvements.
+                </div>
+
                 <h3>Crafting Menu Not Opening</h3>
                 <div class="troubleshoot-item">
                     <h4>Symptoms</h4>
